Fixed ol and ul HTML tags spacing for RTL

--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -152,8 +152,7 @@ ol,
 ul {
   @if $IS_LTR {
     padding-left: 2em;
-  }
-  else {
+  } @else {
     padding-right: 2em;
   }
 }
